--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: flutter_section_list
 description: A ListView and GridView support section like iOS，header pinned，item staggered.
-version: 1.0.5
+version: 1.1.0
 homepage: https://github.com/lhx546920268/flutter_section_list
 repository: https://github.com/lhx546920268/flutter_section_list
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=2.0.2"
 
 dependencies:
   flutter:
