--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  easy_refresh: ^3.3.2+4
   flutter_section_list:
     path: ../
 
